# tesis-backend

./: .env.example  .gitignore  Contexto.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
apps/academic/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/actors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/authentication/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/infrastructure/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/operations/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
core/: exceptions.py  pagination.py  permissions.py
core/permissions/: __init__.py
deploy/: README_SERVER.md  gunicorn_conf.py
docs/: API_ENDPOINTS.md  ARQUITECTURA.md  AUTENTICACION.md  DESPLIEGUE.md  INDEX.md  K6_GRAFANA.md  PERFORMANCE.md  SEED_INSTALLATION.md  SISTEMA_FLUJO_COMPLETO.md
performance/: OPTIMIZACION.md
performance/k6/: REPORTE_RENDIMIENTO.md  analizar_resultados.py  docker-compose.yml  k6-loadtest.js  k6-per-vu.js  k6-simple.js  resultados_estudiantes_fullflow.json  resultados_estudiantes_queryonly.json
requirements/: base.txt  dev.txt
tests/: conftest.py
tests/integration/: test_assignments.py  test_auth.py  test_complaints.py  test_evaluations_cleaning.py  test_information_reports.py  test_infrastructure.py  test_professors.py  test_students.py
(+15 files in other folders)
